# BadClaude

./: .gitignore  CLAUDE.md  README.md  overlay.html  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
